--- a/css/layout.css
+++ b/css/layout.css
@@ -42,7 +42,8 @@ input:focus {
 }
 
 .title {
-	font-size: 4.0em;
+	font-size: 3.6em;
+	line-height: 1.2;
 	margin-top: 70px;
 	margin-bottom: 20px;
 	word-break: break-all;
@@ -75,17 +76,20 @@ input:focus {
 
 .input {
 	width: 100%;
-	height: 50px;
-	line-height: 50px;
-	text-indent: 15px;
+	height: auto;  /* 높이값 초기화 */
+  	line-height : normal;  /* line-height 초기화 */
 	font-size: 14px;
+	padding: 15px;
 	border: 1px solid #373737;
-	border-radius: 30px;
+	border-radius: 40px;
 	resize: none;
 	overflow: hidden;
 	margin-top: 30px;
 	margin-bottom: 30px;
 	outline: none;
+	-webkit-appearance: none;  /* 브라우저별 기본 스타일링 제거 */
+	-moz-appearance: none;
+	appearance: none;
 	webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
@@ -136,5 +140,4 @@ input:focus {
 	cursor: pointer;
 	margin-bottom: 30px;
 }
-
 
