--- a/css/layout.css
+++ b/css/layout.css
@@ -41,7 +41,7 @@ input:focus {
 	width: 100%;
 	max-width: 980px;
 	margin: 0 auto;
-	padding: 30px;
+	padding: 30px 30px 0 30px;
 	text-align: center;
 	-webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -51,7 +51,7 @@ input:focus {
 .title {
 	font-size: 3.6em;
 	line-height: 1.2;
-	margin-top: 70px;
+	margin-top: 40px;
 	margin-bottom: 20px;
 	word-break: break-all;
 	color: #ffffff;
@@ -92,7 +92,6 @@ input:focus {
 	resize: none;
 	overflow: hidden;
 	margin-top: 20px;
-	margin-bottom: 30px;
 	outline: none;
 	-webkit-appearance: none;  /* 브라우저별 기본 스타일링 제거 */
 	-moz-appearance: none;
@@ -158,3 +157,12 @@ input:focus {
 	width: 100%;
 }
 
+.email {
+	color: #bdbdbd;
+}
+
+a.email-link {
+	margin-top: 5px;
+	text-decoration: underline;
+	color: #bdbdbd;
+}
